--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta id="meta-theme-color" name="theme-color" content="#F7F7F7">
-    <title>asistencia</title>
+    <title>admin</title>
 
     <link rel="manifest" href="./manifest.json">
     <link rel="icon" href="./public/img/favicon.ico" type="image/x-icon">
